# project/routes/league.js
@@ -13,6 +13,19 @@ router.get("/getDetails", async (req, res, next) => {
   }
 });
 
+router.get("/getEvents/:gameid", async (req, res, next) => {
+  try {
+    console.log("1111111111");
+    let gameid = req.params.gameid;
+    console.log(gameid);
+    const getEvents_details = await league_utils.getEvents(gameid);
+    res.status(200).send(getEvents_details);
+  } catch (error) {
+    next(error);
+  }
+});
+
+
 router.get("/pastgames", async (req, res, next) => {
   try {
     const past_games = await DButils.execQuery(
