# project/routes/users.js
@@ -145,20 +145,23 @@ router.post("/favoriteGames", async (req, res, next) => {
   }
 });
 
-
-router.delete("/favoriteGames", async (req, res, next) => {
+router.delete("/favorites/:table/:id", async (req, res, next) => {
+// router.delete("/favoriteGames", async (req, res, next) => {
   try {
     const user_id = req.session.user_id;
-    const game_id = req.body.gameId;
-    if (isNaN(game_id)){
+    let id = req.params.id;
+    let table = req.params.table;
+
+    if (isNaN(id)){
       throw { status: 400, message: "incorrect inputs" };
   }
-    const ans = await users_utils.deletefromfavorites("Game", game_id);
+    const ans = await users_utils.deletefromfavorites(table, id);
     res.status(201).send(ans);
   } catch (error) {
     next(error);
   }
 });
+
 
 /**
  * This path returns the favorites teams that were saved by the logged-in user
